# kafka-scripts

./: .gitignore  LICENSE  README.md  default.nix  kafka-scripts.cabal  test.txt
consumer-lag-total/: Main.hs
